# squash

./: .gitignore  CMakeLists.txt  LICENSE  README.md
squashcmd/: CMakeLists.txt  main.cpp
squashlib/: CMakeLists.txt
squashlib/include/: squash.hpp
squashlib/include/math/: Matrix.hpp  math.hpp
squashlib/include/squash/: SquashHeader.hpp  SquashImage.hpp  squash_dec.hpp  squash_enc.hpp
squashlib/include/squashlib/: squash.hpp
squashlib/include/squashlib/math/: Matrix.hpp  MatrixD.hpp  math.hpp
squashlib/include/squashlib/squash/: SquashHeader.hpp  SquashImage.hpp  squash_dec.hpp  squash_enc.hpp
squashlib/include/squashlib/utils/: Buffer.hpp  BufferD.hpp
squashlib/src/squash/: SquashImage.cpp
squashlib/src/squashlib/squash/: SquashImage.cpp
squashtest/: CMakeLists.txt  main.cpp
src/: main.cpp  squash.hpp
src/math/: Matrix.hpp
src/squash/: SquashHeader.hpp  SquashImage.cpp  SquashImage.hpp  squash_dec.hpp  squash_enc.hpp
